# bonddia-mastodon

./: bondia.html  bondia_parsed.dict  data.json  pyproject.toml
.github/workflows/: mastodon-daily.yml
src/: bonddia.py  lang.py
src/bonddia_mastodon/: bonddia.py  lang.py
